# chatgpt-on-a-budget

./: .env.sample  .gitignore  README.md  create_batch.py  download_batch.py  dummy-transactions.csv  pyproject.toml  upload_batch.py
.devcontainer/: Dockerfile  devcontainer.json
