[project]
name = "chatgpt-on-a-budget"
version = "0.1.0"
description = ""
authors = [{ name = "Nemanja Ninkovic" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["openai", "pydantic", "python-dotenv"]

# see https://github.com/astral-sh/uv/issues/6443
[tool.setuptools.packages.find]
where = []
